@@ -1,5 +1,7 @@
 2006-03-17  David Reveman  <davidr@novell.com>
 
+	* plugins/scale.c: Add opacity option.
+
 	* configure.ac: Bump version to 0.0.7.
 
 2006-03-17  Radek Doulik  <rodo@novell.com>
